WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88744
[WebSocket] WebSocket object in Worker Context should fire error event when it fails connection.
https://bugs.webkit.org/show_bug.cgi?id=88744
Summary
[WebSocket] WebSocket object in Worker Context should fire error event when i...
Li Yin
Reported
2012-06-10 20:14:56 PDT
Spec:
http://dev.w3.org/html5/websockets/#feedback-from-the-protocol
If the user agent was required to fail the websocket connection or the WebSocket connection is closed with prejudice, fire a simple event named error at the WebSocket object. This bug is similar with
Bug 86958
, but it is still required to fix in Worker Context.
Attachments
Patch
(10.19 KB, patch)
2012-06-10 20:40 PDT
,
Li Yin
no flags
Details
Formatted Diff
Diff
Patch
(10.20 KB, patch)
2012-06-11 00:59 PDT
,
Li Yin
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Li Yin
Comment 1
2012-06-10 20:40:18 PDT
Created
attachment 146770
[details]
Patch
Yuta Kitamura
Comment 2
2012-06-11 00:39:52 PDT
Comment on
attachment 146770
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=146770&action=review
Looks okay except for one nitpick.
> LayoutTests/http/tests/websocket/tests/hybi/workers/resources/close.js:14 > +function testPassed(message) > +{ > + postMessage("Pass: " + message); > +}
The output should look similar to postResult()'s.
Li Yin
Comment 3
2012-06-11 00:43:52 PDT
(In reply to
comment #2
)
> (From update of
attachment 146770
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=146770&action=review
> > Looks okay except for one nitpick. > > > LayoutTests/http/tests/websocket/tests/hybi/workers/resources/close.js:14 > > +function testPassed(message) > > +{ > > + postMessage("Pass: " + message); > > +} > > The output should look similar to postResult()'s.
OK, I will change the style, thanks for your review.
Li Yin
Comment 4
2012-06-11 00:51:44 PDT
(In reply to
comment #2
)
> (From update of
attachment 146770
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=146770&action=review
> > Looks okay except for one nitpick. > > > LayoutTests/http/tests/websocket/tests/hybi/workers/resources/close.js:14 > > +function testPassed(message) > > +{ > > + postMessage("Pass: " + message); > > +} > > The output should look similar to postResult()'s.
postResult()'s style looks strange. PASS PASS: ****, maybe one PASS is enough. Maybe style of http/tests/websocket/tests/hybi/close.html looks more nice :)
Li Yin
Comment 5
2012-06-11 00:59:04 PDT
Created
attachment 146803
[details]
Patch
Li Yin
Comment 6
2012-06-12 15:29:08 PDT
Hi Kent, Could you have a look? Thanks in advance.
Li Yin
Comment 7
2012-06-13 23:50:52 PDT
Thanks Kent for your review.
WebKit Review Bot
Comment 8
2012-06-14 00:22:26 PDT
Comment on
attachment 146803
[details]
Patch Clearing flags on attachment: 146803 Committed
r120291
: <
http://trac.webkit.org/changeset/120291
>
WebKit Review Bot
Comment 9
2012-06-14 00:22:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug